recursion.cons.remove.Remove.scala.error
Erreur de compilation :
Remove:6: error: type mismatch;
 found   : List[Int]
 required: Int
  return l::remove(l.tail,v)
          ^Remove:5: error: type mismatch;
 found   : Unit
 required: List[Int]
  if(l.tail!=v)
  ^Remove:4: error: type mismatch;
 found   : Unit
 required: List[Int]
  if(l.head != v)
  ^