recursion.cons.remove.Remove.scala.code
def remove(l:List[Int], v:Int): List[Int] = {
  
  if(l.head != v)
  if(l.tail!=v)
  return l::remove(l.tail,v)
  
}
